[package]
name = "mp_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blas = "0.22.0"
ndarray = "0.15.6"
ndarray-linalg = {version = "0.16.0", features = ["openblas"]}
num = "0.4.0"
rand = "0.8.5"
rustfft = "6.1.0"

